--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>javalin-app</finalName>
 	    <plugins>
 	        <plugin>
 	            <groupId>org.apache.maven.plugins</groupId>
@@ -29,6 +30,37 @@
 	                <target>11</target>
 	            </configuration>
 	        </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.4.1</version>
+				<configuration>
+					<transformers>
+						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+							<mainClass>net.demo.javalin.HelloWorld</mainClass> <!-- Here you should put the main class of your application -->
+						</transformer>
+					</transformers>
+					<filters>
+						<filter> <!-- This filter is needed to avoid a bug in the shade plugin -->
+							<artifact>*:*</artifact>
+							<excludes>
+								<exclude>META-INF/*.SF</exclude>
+								<exclude>META-INF/*.DSA</exclude>
+								<exclude>META-INF/*.RSA</exclude>
+							</excludes>
+						</filter>
+					</filters>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 	    </plugins>
 	</build>
 
